--- a/app/Resources/views/form/activities_field.html.twig
+++ b/app/Resources/views/form/activities_field.html.twig
@@ -2,12 +2,20 @@
     {% set class = '' %}
     {% if activity.vars.data %}
         {% if activity.vars.data.activity.type == constant("AppBundle\\Constant\\ActivityType::ACTIVITY") %}
-                {% set class = 'activity-activity' %}
+            {% if activity.vars.data.activity.mode == constant("AppBundle\\Constant\\ActivityMode::IN_CLASS") %}
+                {% set class = 'activity-in-class' %}
             {% else %}
-                {% set class = 'activity-evaluation' %}
+                {% set class = 'activity-in-autonomy' %}
+            {% endif %}
+        {% else %}
+            {% if activity.vars.data.activity.mode == constant("AppBundle\\Constant\\ActivityMode::EVAL_CC") %}
+                {% set class = 'evaluation-cc' %}
+            {% else %}
+                {% set class = 'evaluation-ct' %}
+            {% endif %}
         {% endif %}
     {% endif %}
-    <div class="activity card mb-2 rounded shadow-sm {{ class }}">
+    <div class="activity card mb-2 border rounded shadow {{ class }}">
         <div class="card-header p-1">
             <div class="row">
                 <div class="col-md-auto align-self-center">
@@ -18,16 +26,19 @@
                        aria-controls="collapse_{{ activity.vars.id }}"
                     ></i>
                 </div>
-                <div class="col">
+                <div class="icon"></div>
+                <div class="col align-self-center">
                     <small class="font-weight-bold activity-label">
                         {% if activity.vars.data %}
                             {{ activity.vars.data.activity.label }}
                         {% endif %}
                     </small>
                 </div>
-                <div class="col-md-auto">
-                    <i class="fas fa-arrows-alt-v activity-collection-move" title="Glisser / déposer pour modifier l'ordre."></i>
-                    <i class="fas fa-eraser activity-collection-remove" title="Retirer de la liste."></i>
+                <div class="col-md-auto pl-0">
+                    <i class="fas fa-trash-alt activity-collection-remove" title="Retirer de la liste."></i>
+                </div>
+                <div class="col-md-auto pl-0">
+                    <i class="fas fa-arrows-alt activity-collection-move" title="Glisser / déposer pour modifier l'ordre."></i>
                 </div>
             </div>
         </div>
