--- a/app/Resources/views/form/teachers_field.html.twig
+++ b/app/Resources/views/form/teachers_field.html.twig
@@ -1,15 +1,18 @@
 
 {% macro teacher_template(teacher) %}
-    <li class="list-group-item teacher mt-0">
+    <li class="list-group-item teacher">
         <div class="row">
             <div class="col col-2">
                 {{ form_widget(teacher.manager) }}
             </div>
+            <div class="col col-2">
+                {{ form_widget(teacher.emailVisibility) }}
+            </div>
             <div class="col">
                 {{ form_widget(teacher.completeName) }}
             </div>
-            <div class="col col-md-auto">
-                <i class="fas fa-eraser teacher-collection-remove" title="Retirer de la liste."></i>
+            <div class="col-md-auto pl-0">
+                <i class="fas fa-trash-alt teacher-collection-remove" title="Retirer de la liste."></i>
             </div>
         </div>
         {{ form_widget(teacher) }}
@@ -18,12 +21,15 @@
 
 {% block _edit_presentation_course_info_teachers_widget %}
     {% import _self as teachersField %}
-    <ul class="list-group" id="teachers"
+    <ul class="list-group striped" id="teachers"
         data-prototype="{{ teachersField.teacher_template(form.vars.prototype)|e }}">
         <li class="list-group-item">
             <div class="row">
                 <div class="col-2">
                     <h6>Responsable</h6>
+                </div>
+                <div class="col-2">
+                    <h6>Email visible</h6>
                 </div>
                 <div class="col">
                     <h6>Enseignant</h6>
