--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -44,7 +44,7 @@
             </ul>
         </div>
     </div>
-    <div class="row">
+    <div class="row mt-2">
         <div class="col-6">
             {{ form_widget(form.summary) }}
         </div>
@@ -200,7 +200,7 @@
                 <div class="col-7 border-left">
                     <div class="row">
                         <div class="col-3">
-                            <h6>{{ form_widget(form.teachingMode.children[1]) }}</h6>
+                            <h6 class="text-capitalize">{{ form_widget(form.teachingMode.children[1]) }}</h6>
                         </div>
                         <div class="col">
                             <small>Présentiel</small>
